--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -234,17 +234,14 @@
           <option value="">Seleccione la quincena...</option>
           <%
 sueldo=Sueldo.first.created_at
-
 i=1
-
 while sueldo<$ahora
-
-quincena = (sueldo.day <= 15) ? 0 : 1
-dia= (quincena) ? 17 : 11
-fecha="#{dia}-#{sueldo.month}-#{sueldo.year}";
+  quincena=(sueldo.day<=15)? 0:1
+dia= (quincena==0) ? 11 : 17
+fecha="#{dia}-#{sueldo.month}-#{sueldo.year}"
 %>
 
-          <option value="<%=fecha %>"><%= $dic["quincena"].key(quincena)+ $dic["meses"].key(sueldo.month) +" del #{sueldo.year}"%></option>
+<option value="<%=fecha %>"><%= $dic['quincena'].key(quincena) + $dic["meses"].key(sueldo.month) +" del #{sueldo.year}"%></option>
         <%  if quincena==0
 
 
