--- a/app/views/layouts/_acercade.html.erb
+++ b/app/views/layouts/_acercade.html.erb
@@ -11,7 +11,7 @@
             </div>
             <div class="modal-body ">
 
-                <h1> <img class="text-center" src="/assets/brand.png" alt="" />FUNSONE Nomina</h1>
+                <h1> <img class="text-center" src="/assets/logo.png" alt="" />FUNSONE NOMINA</h1>
                 <dl class="dl-horizontal">
                   <dt>Descripción <span class="fa fa-bars fa-fw"></span></dt>
                   <dd>Sistema de gestión de nominas y empleados de la fundacion social nueva esparta.</dd>
