--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -8,22 +8,18 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" style="padding-top: 0px;
-padding-left:0px;
-      " href="/"><p class="text-primary" style="color:white;"><span class="fa-stack">
-
-
-<i class="fa fa-users fa-stack-2x" style="color:white;"></i>
-<i class="fa fa-diamond fa-stack-1x" style="color:grey; margin-top:0.5em; margin-left:0.1em;"></i>
-      </span>  FUNSONE NOMINAS</p></a>
+      <a class="navbar-brand" style="padding-top: 0px; padding-left:0px; "href="/">
+        <div class="col-md-2">
+          <img src="/assets/brand.png" alt=""/>
+        </div>
+        <p class="col-sm-10" style="color:white;">FUNSONE NOMINA</p>
+      </a>
 
     </div>
     <div style="color: white;
       padding-right: 30px;
       float: right;">
-<h4><%= $dic["quincena"].key($quincena).capitalize+'('+$ahora.strftime("%d/#{$dic["meses"].key($ahora.month)}/%Y")+') '%></h4>
-
-
+      <h4><%= $dic["quincena"].key($quincena).capitalize+'('+$ahora.strftime("%d/#{$dic["meses"].key($ahora.month)}/%Y")+') '%></h4>
 
     </div>
   </nav>
@@ -35,11 +31,12 @@ padding-left:0px;
 
         <%if usuario_signed_in?%>
         <li class="text-center">
-          <a href="#"><span class="fa-stack fa-2x fa-fw">
-<i class="fa fa-circle fa-stack-2x"></i>
+          <a href="#">
+            <span class="fa-stack fa-2x fa-fw">
+              <i class="fa fa-circle fa-stack-2x"></i>
 
-<i class="fa fa-user fa-stack-1x" style="color:red;"></i>
-<%
+              <i class="fa fa-user fa-stack-1x" style="color:red;"></i>
+              <%
 badge="ban"
 badges="Regular"
 if current_usuario.has_role?:admin
@@ -50,18 +47,17 @@ elsif current_usuario.has_role?:coordinador
   badges="Coordinador"
 end
 %>
-<i class="fa fa-<%=badge%> fa-stack-1x" style="color:grey; margin-top:0.6em; margin-left:0.6em;"></i>
-          </span>
-<h6><%= current_usuario.email + " ["+badges+"]" %><span class="fa arrow"></span></h6>
-
-
+              <i class="fa fa-<%=badge%> fa-stack-1x" style="color:black; margin-top:0.6em; margin-left:0.6em; font-size:15px;"></i>
+            </span>
+            <h6><%= current_usuario.email + " ["+badges+"]" %>
+              <span class="fa arrow"></span>
+            </h6>
 
           </a>
           <ul class="nav nav-second-level">
             <li>
-            <%= link_to raw("<i class=\"fa fa-sign-out fa-2x fa-fw\"></i> CERRAR SESIÓN"), destroy_usuario_session_path,method: :delete%>
+              <%= link_to raw("<i class=\"fa fa-sign-out fa-2x fa-fw\"></i> CERRAR SESIÓN"), destroy_usuario_session_path,method: :delete%>
             </li>
-
 
           </ul>
         </li>
@@ -85,7 +81,12 @@ end
           </ul>
         </li>
         <li>
-          <%= link_to raw("<i class=\"fa fa-th-list fa-2x fa-fw\"></i> NÓMINAS"), tipos_path%>
+
+          <a href="<%=tipos_path%>">
+            <span class="fa-stack  fa-fw" style="margin-right: 14px">
+              <i class="fa fa-user fa-stack-2x" style="color:white;"></i>
+              <i class="fa fa-money fa-stack-1x" style="color:black; margin-top:0.5em; margin-left:0.3em;"></i>
+            </span>NÓMINAS</a>
         </li>
         <li>
           <a href="#">
@@ -154,7 +155,7 @@ end
 
         </li>
 
-      <%end%>
+        <%end%>
       </ul>
 
     </div>
