--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -233,8 +233,8 @@ p {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  max-height: 170px;
-  max-width: 170px;
+  max-height: 126px;
+  max-width: 126px;
 }
 .navbar-cls-top .navbar-brand {
   color: #fff;
@@ -468,4 +468,7 @@ p {
     outline: 0;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+.fa-stack.fa-fw {
+    width: 2.5714285714285716em;
 }
