--- a/app/views/conceptos/_concepto.html.erb
+++ b/app/views/conceptos/_concepto.html.erb
@@ -12,6 +12,7 @@
           <th class= "actions">Fórmula</th>
           <th class= "actions">Fórmula Patrono</th>
           <th class= "actions">Modalidad de pago</th>
+          <th class= "actions">Fecha de Creacion</th>
           <th class= "actions" style= "width: 100px;">Acciones</th>
         </tr>
       </thead>
@@ -25,11 +26,13 @@
           <td><var><%= concepto.formulas.last.empleado %></var></td>
             <td><var><%= concepto.formulas.last.patrono %></var></td>
           <td><%= $dic["modalidad_de_pago"].key(concepto.modalidad_de_pago )%></td>
-
+          <%
+            quincena=(concepto.created_at.day <=15)?0:1
+          %>
+          <td><%= $dic["quincena"].key(quincena).capitalize+'('+concepto.created_at.strftime("#{$dic["meses"].key($ahora.month)}-%Y")+') '%></td>
           <td>
             <%= render 'layouts/actions', x: Concepto, y: edit_concepto_path(concepto), z: concepto %>
-
-        </td>
+          </td>
         </tr>
         <% end %>
       </tbody>
