--- a/app/views/cargos/_cargo.html.erb
+++ b/app/views/cargos/_cargo.html.erb
@@ -17,11 +17,11 @@
       <tbody>
         <% p.each do |cargo| %>
         <tr>
-          <td><%= cargo.nombre  %></td>
-          <td><%= cargo.departamento.nombre %></td>
+          <td><%= cargo.nombre.upcase %></td>
+          <td><%= cargo.departamento.nombre.upcase %></td>
           <td><%= tr(cargo.sueldos.last.monto) %></td>
           <td><%= tr(cargo.sueldos.last.sueldo_integral) %></td>
-          <td><%= cargo.tipo.nombre %></td>
+          <td><%= cargo.tipo.nombre.upcase %></td>
           <td><%if cargo.disponible %>
             <span class="fa fa-check"></span>
             <%else%>
