--- a/app/views/conceptos/_concepto.html.erb
+++ b/app/views/conceptos/_concepto.html.erb
@@ -12,7 +12,7 @@
           <th class= "actions">Fórmula</th>
           <th class= "actions">Fórmula Patrono</th>
           <th class= "actions">Modalidad de pago</th>
-          <th class= "actions">Fecha de Creacion</th>
+          <th class= "actions">Fecha de Creación</th>
           <th class= "actions" style= "width: 100px;">Acciones</th>
         </tr>
       </thead>
