--- a/app/views/layouts/_acercade.html.erb
+++ b/app/views/layouts/_acercade.html.erb
@@ -7,14 +7,14 @@
                 </button>
                 <h4 class="modal-title" id="myModalLabel">
                     <i class="fa fa-help fa-2x"></i>
-                    Acerca de..</h4>
+                    Acerca de...</h4>
             </div>
-            <div class="modal-body ">
+            <div class="modal-body" style="margin-right:15px;">
 
-                <h1> <img class="text-center" src="/assets/logo.png" alt="" />FUNSONE NOMINA</h1>
-                <dl class="dl-horizontal">
+                <h1> <img class="text-center" src="/assets/logo.png" alt="" />FUNSONE NÓMINA</h1>
+                <dl class="dl-horizontal" >
                   <dt>Descripción <span class="fa fa-bars fa-fw"></span></dt>
-                  <dd>Sistema de gestión de nominas y empleados de la fundacion social nueva esparta.</dd>
+                  <dd style="text-align:justify;">Sistema bajo ambiente web para el control de empleados y gestión de nóminas de la Fundacion Social Nueva Esparta.</dd>
                 <dt>Versión <span class="fa fa-code fa-fw"></span></dt>
                 <dd>2016.05.31</dd>
 
@@ -26,14 +26,9 @@
                 </dd>
                 <dd>Monica Huamani</dd>
                 <dt>Creditos <span class="fa fa-plug fa-fw"></span></dt>
-                <dd>eyrtyrt
-                </dd>
+                <dd>eyrtyrt</dd>
                 <dd>Todo lo que haya que darle credito que no hayamos hecho</dd>
               </dl>
-
-
-
-
 </div>
 <div class="modal-footer">
 
