--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,7 +12,7 @@
         <div class="col-md-2">
           <img src="/assets/brand.png" alt=""/>
         </div>
-        <p class="col-sm-10" style="color:white;">FUNSONE NOMINA</p>
+        <p class="col-sm-10" style="color:white;">FUNSONE NÓMINA</p>
       </a>
 
     </div>
@@ -129,7 +129,7 @@ end
             <%end%>
             <% if can? :read, Setting %>
             <li>
-              <%= link_to raw("<i class=\"fa fa-gears fa-fw\"></i>CONFIGURACION"), settings_path%>
+              <%= link_to raw("<i class=\"fa fa-gears fa-fw\"></i>CONFIGURACIÓN"), settings_path%>
             </li>
             <%end%>
 
